--- a/index_files/main.css
+++ b/index_files/main.css
@@ -147,7 +147,7 @@ h4 {
     padding-right: 25px;
     font-weight: 300;
     width: 60%;
-    border-left:1px solid #000;
+    //border-left:1px solid #000;
 }
 
 .maintext h1 {
